@@ -165,6 +165,8 @@ a.read:hover			{color:#000;}
 .list_stats_num				{display:block; font-size:2.9em; color:#fff; line-height:0.8em;}
 a.button					{padding:10px 20px; background-color:#fff; font-size:1.25em; color:#000; border-radius:0 0 8px 8px; display:block; max-width:320px; margin:0 auto; text-align:center; border:1px solid #000; border-top:0;}
 a.button:hover				{background-color:#000; color:#fff;}
+a.csv_download				{display:block; margin-top:20px; padding:10px 20px; background-color:#000; text-align:center; color:#fff;}
+a.csv_download:hover		{background-color:#000; color:#fff;}
 
 
 /*	For url #view=donors & all #view=donor_*
