@@ -168,7 +168,8 @@ a.read:hover			{color:#DCF6FF;}
 .list_stats_num				{display:block; font-size:2.9em; color:#fff; line-height:0.8em;}
 a.button					{padding:10px 20px; background-color:#3B9CFB; font-size:1.25em; color:#fff; border-radius:0 0 8px 8px; display:block; max-width:320px; margin:0 auto; text-align:center;}
 a.button:hover				{background-color:#0081FF;}
-
+a.csv_download				{display:block; margin-top:20px; padding:10px 20px; background-color:rgba(132, 191, 255, 0.24); text-align:center; color:#ccc;}
+a.csv_download:hover		{background-color:rgba(115, 182, 255, 0.24); color:#fff;}
 	
 /*	For url #view=donors & all #view=donor_*
 	============================================= */
