@@ -119,6 +119,8 @@ a.read:hover			{color:#DFF;}
 .list_stats_num				{color:#FFF;}
 a.button					{background-color:#39F; color:#FFF;}
 a.button:hover				{background-color:#08F;}
+a.csv_download				{background-color:rgba(132, 191, 255, 0.24); color:#ccc;}
+a.csv_download:hover		{background-color:rgba(115, 182, 255, 0.24); color:#fff;}
 
 	
 /*	For url #view=donors & all #view=donor_*
