@@ -63,7 +63,7 @@
 	{table_donors_row_head}
 	{table_donors_rows}
 	</table>
-	<a download="dportal_donors_{country_code}.csv" href="{csv_data}" >Download Table as CSV</a>
+	<a download="dportal_donors_{country_code}.csv" href="{csv_data}" class="csv_download">Download Table as CSV</a>
 </div>
 
 #table_donors_rows
