@@ -10,6 +10,7 @@ Fixed hover states including translations
 Fixed missing hover state for sector title in table
 Fixed hover titles for CRS to reflect footer
 Added description when "data is missing" for table links
+Added CSV download link for tables
 
 
 Development Portal (2014-07-23 shi)
